src/tests/functionality/assignment_5_functions_headers/valid/02_mandatory_forward_declaration_then_definition.c
int triple(int x);

int triple(int x) {
    return x * 3;
}

int main() {
    return triple(4);
}
