src/tests/functionality/assignment_5_functions_headers/invalid_semantic/12_mandatory_call_before_declaration_is_error.c
int main() {
    return later(5);
}

int later(int x) {
    return x;
}
